Update Admin.  dfTable fixed whitespace wrapping ordering caret.

--- a/web/admin/admin_components/dreamfactory_components/adf-table/style/style.css
+++ b/web/admin/admin_components/dreamfactory_components/adf-table/style/style.css
@@ -15,6 +15,10 @@
     background: lightsteelblue !important;
 }
 
+.df-th-text {
+    white-space: nowrap;
+}
+
 .df-dropdown-height {
 
     height: 160px;
